# bionemo-fw-ea

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets-nb.baseline  .secrets.baseline  404.html  CODE-REVIEW.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  Dockerfile.uv  QUICKSTART.md  README.md  artifact_paths  artifact_paths.yaml  download_artifacts.py  download_models.py  download_models.sh  index.html  launch.sh  objects.inv  pyproject.toml  pytest.ini  requirements-cve.txt  requirements-dev.txt  requirements-test.txt  setup.py  sitemap.xml  tach.toml  tach.yml  tests.py
.github/: blossom-ci.yml  (+2 more)
fw2nim_examples/molmim/: Dockerfile  README.md  fw_complete_config.yaml  pyproject.toml  setup.py
fw2nim_examples/molmim/src/molmim_fw2nim/: molmim_types.py
fw2nim_examples/molmim/tests/: test_molmim_types_conversion.py
sub-packages/bionemo-amplify/: README.md  pyproject.toml  setup.py
sub-packages/bionemo-amplify/src/bionemo/amplify/: api.py
sub-packages/bionemo-amplify/src/bionemo/amplify/data/: datamodule.py  dataset.py
sub-packages/bionemo-amplify/src/bionemo/amplify/model/: attention.py  embedding.py  model.py
sub-packages/bionemo-amplify/src/bionemo/amplify/scripts/: README.md  train_amplify.py
sub-packages/bionemo-amplify/tests/bionemo/amplify/: conftest.py
sub-packages/bionemo-amplify/tests/bionemo/amplify/data/: test_datamodule.py  test_dataset.py  test_tokenizer.py
sub-packages/bionemo-amplify/tests/bionemo/amplify/model/: test_attention.py  test_embedding.py  test_lr_scheduler.py  test_model.py
sub-packages/bionemo-core/: .python-version  pyproject.toml
sub-packages/bionemo-core/src/bionemo/core/data/: multi_epoch_dataset.py  permute.py  resamplers.py
sub-packages/bionemo-core/src/bionemo/core/model/: config.py
sub-packages/bionemo-core/src/bionemo/core/utils/: gpu.py  random_utils.py
sub-packages/bionemo-core/tests/bionemo/core/: test_todo_core.py
sub-packages/bionemo-core/tests/bionemo/core/data/: test_load.py  test_load_notebook.ipynb
sub-packages/bionemo-core/tests/bionemo/pytorch/data/: test_multi_epoch_dataset.py  test_permute.py
sub-packages/bionemo-example_model/: README.md  pyproject.toml  requirements.txt
sub-packages/bionemo-example_model/src/bionemo/example_model/: lightning_basic.py
sub-packages/bionemo-example_model/src/bionemo/example_model/lightning/: lightning_basic.py
sub-packages/bionemo-example_model/src/bionemo/example_model/training_scripts/: finetune_mnist.py  pretrain_mnist.py
sub-packages/bionemo-example_model/tests/bionemo/example_model/: test_lightning_basic.py
sub-packages/bionemo-example_model/tests/bionemo/example_model/lightning/: test_lightning_basic.py
sub-packages/bionemo-fw/: _requirements.txt  pyproject.toml  requirements.txt
sub-packages/bionemo-llm/: pyproject.toml  requirements.txt
sub-packages/bionemo-llm/src/bionemo/llm/: api.py  lightning.py  train.py
sub-packages/bionemo-llm/src/bionemo/llm/data/: collate.py  datamodule.py  masking.py
sub-packages/bionemo-llm/src/bionemo/llm/model/: config.py  layers.py  loss.py
sub-packages/bionemo-llm/src/bionemo/llm/run/: config_models.py
sub-packages/bionemo-llm/src/bionemo/llm/utils/: callbacks.py  datamodule_utils.py  iomixin_utils.py  logger_utils.py  remote.py
sub-packages/bionemo-llm/tests/bionemo/llm/: test_lightning.py
sub-packages/bionemo-llm/tests/bionemo/llm/data/: test_collate.py  test_masking.py
sub-packages/bionemo-llm/tests/bionemo/llm/utils/: test_callbacks.py  test_datamodule_utils.py  test_logger_utils.py
sub-packages/bionemo-noodles/: Cargo.toml  README.md  pyproject.toml
sub-packages/bionemo-noodles/rust/src/: lib.rs
sub-packages/bionemo-noodles/src/bionemo/noodles/: __init__.py  nvfaidx.py
sub-packages/bionemo-noodles/tests/bionemo/noodles/: test_nvfaidx.py  test_sequence_ops.py
sub-packages/bionemo-noodles/tests/bionemo/noodles/data/: bad_index.fasta.fai  dupes.fasta  sample.fasta  sample.fasta.fai
sub-packages/bionemo-scclip/: README.md  pyproject.toml
sub-packages/bionemo-scclip/src/bionemo/scclip/model/: model.py
sub-packages/bionemo-scdl/: README.md  pyproject.toml  requirements.txt  setup.py
sub-packages/bionemo-scdl/examples/: example_notebook.ipynb
sub-packages/bionemo-scdl/scripts/: convert_h5ad_to_scdl.py
sub-packages/bionemo-scdl/src/bionemo/scdl/: VERSION.py
sub-packages/bionemo-scdl/src/bionemo/scdl/api/: single_cell_row_dataset.py
sub-packages/bionemo-scdl/src/bionemo/scdl/index/: row_feature_index.py
sub-packages/bionemo-scdl/src/bionemo/scdl/io/: single_cell_collection.py  single_cell_memmap_dataset.py
sub-packages/bionemo-scdl/src/bionemo/scdl/scripts/: convert_h5ad_to_scdl.py
sub-packages/bionemo-scdl/src/bionemo/scdl/util/: async_worker_queue.py  pytoml_utils.py  torch_dataloader_utils.py
sub-packages/bionemo-scdl/tests/bionemo/scdl/: conftest.py
sub-packages/bionemo-scdl/tests/bionemo/scdl/index/: test_row_feature_index.py
sub-packages/bionemo-scdl/tests/bionemo/scdl/io/: test_single_cell_collection.py  test_single_cell_memmap_dataset.py
sub-packages/bionemo-scdl/tests/bionemo/scdl/util/: test_torch_dataloader_utils.py
sub-packages/bionemo-testing/: pyproject.toml  requirements.txt
sub-packages/bionemo-testing/src/bionemo/testing/: callbacks.py  megatron_parallel_state_utils.py  testing_callbacks.py
sub-packages/bionemo-testing/src/bionemo/testing/data/: load.py  resource.py
sub-packages/bionemo-testing/src/bionemo/testing/harnesses/: stop_and_go.py
sub-packages/bionemo-testing/tests/bionemo/testing/: test_megatron_parallel_state_utils.py
sub-packages/bionemo-testing/tests/bionemo/testing/data/: test_load.py  test_resource.py
sub-packages/scdl/: README.md  pyproject.toml  requirements.txt
sub-packages/scdl/bionemo/data/scdl/api/: single_cell_row_dataset.py
sub-packages/scdl/bionemo/data/scdl/exe/: __init__.py  convert_h5ad_to_scdl.py
sub-packages/scdl/examples/: convert_h5ad_to_scdl.py
sub-packages/scdl/tests/: test_SCMMAP.py  test_feature_index.py  test_sccollection.py  test_string_enum.py
(+1604 files in other folders)
