[project]
name = "bionemo-fw-ea"
version = "2.0.0"
license = {file = "LICENSE/license.txt"}
description = "Bionemo 2 Development Environment"
authors = [
    { name = "Eric Dawson", email = "edawson@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Steven Kothen-Hill", email = "skothenhill@nvidia.com" },
    { name = "Jonathan Mitchell", email = "jomitchell@nvidia.com" },
    { name = "Farhad Ramezanghorbani", email = "farhadr@nvidia.com" },
    { name = "Timur Rvachov", email = "trvachov@nvidia.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    # internal
    "bionemo-testing",
    # requirements-dev.txt
    "ruff==0.0.292",
    "black==23.1.0",
    "pre-commit==3.4.0",
    "virtualenv==20.26.3",
    "ipdb==0.13.11",
    "click==8.1.7",
    "tenacity==8.5.0",
    "tach>=0.9.0",
    # requirements-test.txt
    # COVERED by bionemo-testing project !
#    "pytest-cov==4.1.0",
#    "pytest-timeout==2.2.0",
#    "pytest-dependency==0.5.1",
#    "testbook==0.4.2",
#    "requests_mock==1.11.0",
    # For SwiftStack access
    "awscli==1.33.33",
    "nbval==0.11.0",
]

[tool.rye.workspace]
members = ["sub-packages/*"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sub-packages/*"]

[tool.black]
line-length = 119
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "E741", "E501", "D100", "RUF005", "RUF010"]
select = [
    "C",    # Pylint conventions
    "E",    # style stuff, whitespaces
    "F",    # important pyflakes lints
    "I",    # import sorting
    "W",    # Pylint warnings
    "D",    # Documentation formatting
    "RUF",  # Some Ruff-specific lints, unused noqas, etc.
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811",]
"test_*.py" = ["D",]
"scripts/*.py" = ["D",]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["bionemo"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
norecursedirs = ["3rdparty"]
addopts = ["--ignore=3rdparty"]
