[tool.black]
line-length = 119
target-version = ['py310']
skip-string-normalization = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = ["C901", "D100", "E501", "E741", "RUF005", "RUF010"]
select = [
    "C",   # Pylint conventions
    "D",   # Documentation formatting
    "E",   # style stuff, whitespaces
    "F",   # important pyflakes lints
    "I",   # import sorting
    "RUF", # Some Ruff-specific lints, unused noqas, etc.
    "W",   # Pylint warnings
]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "E402", "F401", "F403", "F811"]
"test_*.py" = ["D"]
"scripts/*.py" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["bionemo"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
norecursedirs = ["3rdparty"]
addopts = ["--ignore=3rdparty"]

[project]
license = { file = "LICENSE/license.txt" }

[tool.pyright]
include = ["./sub-packages/", "./scripts/"]
exclude = ["*/tests/"]
executionEnvironments = [
    { "root" = ".", pythonVersion = "3.10", extraPaths = [
        "./3rdparty/Megatron-LM",
        "./3rdparty/NeMo",
        "./sub-packages/bionemo-core/src",
        "./sub-packages/bionemo-esm2/src",
        "./sub-packages/bionemo-example_model/src",
        "./sub-packages/bionemo-fw/src",
        "./sub-packages/bionemo-geneformer/src",
        "./sub-packages/bionemo-llm/src",
        "./sub-packages/bionemo-scdl/src",
        "./sub-packages/bionemo-testing/src",
    ] },
]
