[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# For guidance, see: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "molmim-fw2nim"
version = "0.1.0"
authors = []
description = "FW2NIM example with BioNeMo FW MolMIM model"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Private :: Do Not Upload",
]
# cannot list all dependencies as it requires bionemo fw which is **not** pip installable due to NeMo dependency
dependencies = [
    "fw2nim",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [ "ignore::DeprecationWarning",]
