[project]
name = "bionemo-core"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo core interfaces and PyTorch-related code."
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
]
dependencies = [
    "torch>=2.2.1",
    "numpy",
    "pytorch-lightning",
    # nemo-toolkit?
    # megatron?
    # apex?
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.rye.workspace]
members = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
