[project]
name = "bionemo-example-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
