[project]
name = "bionemo-example_model"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo example_model: Example model for documentation and tutorials. Do Not Distriburte on PyPI !!"
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Jonathan Mitchell", email = "jomitchell@nvidia.com" },
]
dependencies = [
    # internal
    "bionemo-llm",
    # external
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.rye.workspace]
members = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
