[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]

# UV doesn't seem to pick up on changes to requirements.txt files as a signal that it needs to re-lock a project's
# dependencies. We should probably just move to listing requirements in these pyproject.toml files directly, and also
# now include bionemo-* sub-packages explicitly.
dependencies = [
    'bionemo-core',
    'bionemo-llm',
    'megatron-core',
    'nemo_toolkit',
    'torchvision >= 0.15.1',
]
name = "bionemo-example_model"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo example_model: Example model for documentation and tutorials. Do Not Distriburte on PyPI !!"
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Jonathan Mitchell", email = "jomitchell@nvidia.com" },
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]
