[project]
name = "bionemo-fw"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo Framework (FW): Production grade framework for AI-enabled Drug Discovery. Consists of all independently installable bionemo feature packages too."
authors = [
    { name = "Eric Dawson", email = "edawson@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Steven Kothen-Hill", email = "skothenhill@nvidia.com" },
    { name = "Jonathan Mitchell", email = "jomitchell@nvidia.com" },
    { name = "Farhad Ramezanghorbani", email = "farhadr@nvidia.com" },
    { name = "Timur Rvachov", email = "trvachov@nvidia.com" },
]
dependenices = [
    #
    # internal: all other bionemo sub-packages (!!!)
    #
    ## components
    "bionemo-core",
    "bionemo-llm",
    ## batteries-included
    "bionemo-scdl",
    "bionemo-esm2",
    "bionemo-geneformer",
    # NOT (!!!) "bionemo-example_model",
    # NOT (!!!) "bionemo-testing",
    #
    # external
    #
    "tensorstore==0.1.45",
    "zarr",
    "nltk",
    "numba>=0.57.1",
    # flash-attn
    # 8.269 Collecting flash-attn (from -r bionemo-fw/requirements.txt (line 5))
    # 8.354   Downloading flash_attn-2.6.3.tar.gz (2.6 MB)
    # 8.386      ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 2.6/2.6 MB 83.7 MB/s eta 0:00:00
    # 8.617   Preparing metadata (setup.py): started
    # 8.789   Preparing metadata (setup.py): finished with status 'error'
    # 8.791   error: subprocess-exited-with-error
    # 8.791
    # 8.791   × python setup.py egg_info did not run successfully.
    # 8.791   │ exit code: 1
    # 8.791   ╰─> [6 lines of output]
    # 8.791       Traceback (most recent call last):
    # 8.791         File "<string>", line 2, in <module>
    # 8.791         File "<pip-setuptools-caller>", line 34, in <module>
    # 8.791         File "/tmp/pip-install-s3zakuyp/flash-attn_26f56ac7a6a940b9b6c5d7664cb8d8ec/setup.py", line 21, in <module>
    # 8.791           import torch
    # 8.791       ModuleNotFoundError: No module named 'torch'
    # 8.791       [end of output]
    "lightning>=2.2.1",
    "pytorch-lightning>=2.2.1",
]
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.rye.workspace]
members = [
    ## components
    "bionemo-core",
    "bionemo-llm",
    ## batteries-included
    "bionemo-scdl",
    "bionemo-esm2",
    "bionemo-geneformer",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
