[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bionemo-noodles"
readme = "README.md"
description = "Python wrapper around [noodles](https://github.com/zaeleus/noodles)."
authors = [{ name = "BioNeMo Team", email = "bionemofeedback@nvidia.com" }]
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = ["version"]
dependencies = [
    # internal
    'bionemo-core',
    # external
]

[tool.maturin]
bindings = "pyo3"
# TODO can we provide more compatability?
compatibility = "linux"
python-source = "src"
# we could make this bionemo.noodles.fasta_wrapper, but that would require it to be its own namespaced package.
module-name = "bionemo.noodles_fasta_wrapper"
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bionemo.*"]
namespaces = true
exclude = ["test*."]

[tool.uv]
cache-keys = [{ git = true }]
