[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bionemo-scclip"
license.file = "LICENSE"
readme = "README.md"
description = "scCLIP, a CLIP model for Single Cell data."
authors = [
    { name = "Yongju Lee", email = "leey86@gene.com" },
    { name = "Youssef Nashed", email = "ynashed@nvidia.com" },
]
dynamic = ["dependencies", "version"]

[tool.setuptools.packages.find]
where = ["src"]
include=["bionemo.*"]
namespaces = true
exclude = ["test*."]
