[project]
name = "bionemo-scdl"
license.file = "LICENSE"
version = "0.0.1"
readme = "README.md"
description = "SCDL, a Dataset class for Single Cell data."
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
    { name = "Polina Binder", email = "pbinder@nvidia.com" },
    { name = "Eric Dawson", email = "edawson@nvidia.com" },
]
dependencies = [
    "pyarrow>=16.0.0",
    "anndata>=0.10.7",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "torch>=2.1.0",
    "scipy>=1.11.1",
    "bionemo-core",
]
requires-python = ">= 3.10"

[project.scripts]
convert_h5ad_to_scdl = "bionemo.scdl.scripts.convert_h5ad_to_scdl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.rye.workspace]
members = ["bionemo-core"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
