[project]
name = "bionemo-testing"
version = "2.0.0"
license.file = "LICENSE"
readme = "README.md"
description = "BioNeMo testing: utilities aiding test creation for bionemo packages. Do Not Distriburte on PyPI !!"
authors = [
    { name = "John St. John", email = "jstjohn@nvidia.com" },
    { name = "Malcolm Greaves", email = "mgreaves@nvidia.com" },
]
dependencies = []
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependeices = [
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "pytest-dependency==0.5.1",
    "testbook==0.4.2",
    "requests_mock==1.11.0",
    # not listed:
    #   megatron-lm
    #   nemo
]

[tool.rye.workspace]
members = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bionemo"]
